fix the spacing problem in hero-info

--- a/styles/index.css
+++ b/styles/index.css
@@ -63,16 +63,23 @@
 .hero-area .hero-info {
     display: flex;
     flex-direction: column;
-    padding: 20px;
     justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.hero-area .hero-info .hero-title {
+.hero-area .hero-info .hero-title h1 {
     color: white;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
 
-.hero-area .hero-info .hero-subtitle {
+.hero-area .hero-info .hero-subtitle p {
     color: white;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
 
 .hero-area .hero-info .hero-button button {
